--- a/credentials.yaml
+++ b/credentials.yaml
@@ -33,17 +33,6 @@
 #   credentials['email']
 
 default:
-    email: <value>
-    password: <value>
-    name: <value>
-api:
-    key: <value>
-    secret: <value>
-paypal:
-    email: <value>
-    password: <value>
-    name: <value>
-sandbox:
-    email: <value>
-    password: <value>
-    name: <value>
+    email: sample@email.com
+    password: samplepassword
+    name: samplename
